update value to false for noUnusedLocals and noUnusedParameters on tsconfig.app.json and tsconfig.node.json

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -16,8 +16,8 @@
 
     /* Linting */
     "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "noUnusedLocals": false, // Change to false
+    "noUnusedParameters": false, // Change to false
     "noFallthroughCasesInSwitch": true
   },
   "include": ["src"]
