--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -14,8 +14,8 @@
 
     /* Linting */
     "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "noUnusedLocals": false, // Change to false
+    "noUnusedParameters": false, // Change to false
     "noFallthroughCasesInSwitch": true
   },
   "include": ["vite.config.ts"]
